--- a/projeto/Implementacao/frontend/package.json
+++ b/projeto/Implementacao/frontend/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
     "@svgr/webpack": "^5.4.0",
     "axios": "^0.21.3",
+    "bootstrap": "5.1.3",
     "classnames": "^2.3.1",
     "env-cmd": "^10.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -17,6 +21,7 @@
     "next-routes": "^1.4.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2",
     "react-input-mask": "^2.0.4",
     "styled-components": "^5.3.3",
