--- a/implementacao/frontend/.gitignore
+++ b/implementacao/frontend/.gitignore
@@ -22,9 +22,17 @@
 # debug
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+yarn-error.log*import axios from "axios";
+import { baseURL } from "utils/constants/endpoints";
+
+const api = axios.create({
+  baseURL,
+});
+
+export default api;
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
