--- a/implementacao/frontend/package.json
+++ b/implementacao/frontend/package.json
@@ -14,6 +14,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "next": "12.0.2",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^1.4.0",
