--- a/implementacao/backend/src/main/resources/application.properties
+++ b/implementacao/backend/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
